err/products.compositepack.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/CompositePack'...
Compiling './lib/python3.5/site-packages/Products/CompositePack/ClassGen.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/ClassGen.py", line 55
    raise TypeError, ("CompositePack cannot override design_view "
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/CompositePack/Extensions'...
Compiling './lib/python3.5/site-packages/Products/CompositePack/Extensions/Install.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/Extensions/Install.py", line 88
    raise RuntimeError, "ts=%r" % ts
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/CompositePack/LayoutRegistry.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/LayoutRegistry.py", line 37
    raise CompositePackError, msg
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/CompositePack/ViewletRegistry.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/ViewletRegistry.py", line 38
    raise CompositePackError, msg
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/CompositePack/browser'...
Listing './lib/python3.5/site-packages/Products/CompositePack/composite'...
Compiling './lib/python3.5/site-packages/Products/CompositePack/composite/fragments.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (fragments.py, line 118)
Compiling './lib/python3.5/site-packages/Products/CompositePack/composite/navigationpage.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (navigationpage.py, line 68)
Compiling './lib/python3.5/site-packages/Products/CompositePack/composite/packview.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/composite/packview.py", line 44
    print position
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/CompositePack/composite/titles.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (titles.py, line 82)
Listing './lib/python3.5/site-packages/Products/CompositePack/demo'...
Compiling './lib/python3.5/site-packages/Products/CompositePack/demo/ATCompositeDocument.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (ATCompositeDocument.py, line 24)
Listing './lib/python3.5/site-packages/Products/CompositePack/doc'...
Listing './lib/python3.5/site-packages/Products/CompositePack/exportimport'...
Listing './lib/python3.5/site-packages/Products/CompositePack/i18n'...
Listing './lib/python3.5/site-packages/Products/CompositePack/plone'...
Listing './lib/python3.5/site-packages/Products/CompositePack/profiles'...
Listing './lib/python3.5/site-packages/Products/CompositePack/profiles/default'...
Listing './lib/python3.5/site-packages/Products/CompositePack/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/CompositePack/skins'...
Listing './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack'...
Listing './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/compopagedrawers'...
Compiling './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/copy_compo_element.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/copy_compo_element.py", line 4
    print "content=",content
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/createCompoElement.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/createCompoElement.py", line 21
    return context.REQUEST.RESPONSE.redirect(pageDesignUrl)
                                                          ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/createCompoFragment.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/createCompoFragment.py", line 29
    return context.REQUEST.RESPONSE.redirect(pageDesignUrl)
                                                          ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/createCompoPortlet.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/createCompoPortlet.py", line 26
    return context.REQUEST.RESPONSE.redirect(pageDesignUrl)
                                                          ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/createCompoTitle.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/createCompoTitle.py", line 30
    return context.REQUEST.RESPONSE.redirect(pageDesignUrl)
                                                          ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/edit_compo_element.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/edit_compo_element.py", line 27
    return
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/sample-compositepack-customisation-policy.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/skins/compositepack/sample-compositepack-customisation-policy.py", line 48
    print "%s already composable" % compo
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack_design'...
Listing './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack_layouts'...
Listing './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack_layouts_azax'...
Listing './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack_viewlets'...
Compiling './lib/python3.5/site-packages/Products/CompositePack/skins/compositepack_viewlets/default_viewlet.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/skins/compositepack_viewlets/default_viewlet.py", line 2
    return context.getId()
                         ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/CompositePack/tests'...
Compiling './lib/python3.5/site-packages/Products/CompositePack/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/CompositePack/tests/test_composable.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/tests/test_composable.py", line 228
    except Unauthorized, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/CompositePack/tool.py'...
***   File "./lib/python3.5/site-packages/Products/CompositePack/tool.py", line 472
    raise CompositePackError, 'cannot find kupu library tool'
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/CompositePack/viewlet'...
Listing './lib/python3.5/site-packages/Products/CompositePack/viewlet/interfaces'...
Listing './lib/python3.5/site-packages/Products/CompositePack/www'...
Listing './lib/python3.5/site-packages/Products.CompositePack-1.2a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
